Fix sticky menu on mobile, Update previews

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -6,4 +6,8 @@
     #content {
         order: 2;
     }
+
+    #sidebar {
+        position: relative;
+    }
 }
